[package]
name = "cargo-builder"
version = "0.1.0"
edition = "2021"
description = "A Cargo build wrapper that shows errors-only output with optional logging"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cargo-builder"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
cargo_metadata = "0.18"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
regex = "1.0"
atty = "0.2"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.0"